--- a/src/components/All Headers/mobileHeader/index.module.css
+++ b/src/components/All Headers/mobileHeader/index.module.css
@@ -104,4 +104,14 @@ justify-content: center;
   .mobileHeader {
     display: block !important;
   }
+  .text {
+    text-align: center;
+    font-family: Montserrat-500;
+    font-size: 4px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+  }
 }
