--- a/src/components/CustomerSupportPage/Detail.module.css
+++ b/src/components/CustomerSupportPage/Detail.module.css
@@ -13,7 +13,10 @@
   text-transform: uppercase;
   margin: 40px 0;
 }
-
+.LinkHolder{
+  color: #000;
+  text-decoration: underline!important;
+}
 .FullQuearyDetailH2 svg {
   margin: 0 10px 0 0;
 }
