--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -22,7 +22,20 @@ background: #FFF;
   position: sticky;
   left: 0%;
   z-index: 2;
+}.spinnerOverlay {
+  position: absolute;
+  top:0%;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  color: #fff;
 }
+
 .month {
   background-color: #eeeeee !important;
   color: #000 !important;
