--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -126,6 +126,7 @@ margin-left: -30px;
    padding: 3px 10px 3px 10px ;
    font-family: Montserrat-400;
    font-size: 13px;
+   margin-top: 12px;
  }
 .cancelButton {
   border: 2px solid black;
