--- a/src/components/My Retailers/SelectBrandModel/style.module.css
+++ b/src/components/My Retailers/SelectBrandModel/style.module.css
@@ -118,6 +118,30 @@
   transition: 0.5s;
 }
 
+.BrandName {
+  height: 60px;
+  border: 0.5px solid #d5d9d9;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 0 18px;
+}
+
+.BrandName label {
+  color: #000;
+  font-family: "Montserrat";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 228.571% */
+  letter-spacing: 1.4px;
+  display: flex;
+  /* gap: 10px; */
+  text-align: left;
+  align-items: center;
+  /* padding: 0 18px; */
+}
 .BrandButton {
   display: flex;
   justify-content: end;
@@ -173,3 +197,4 @@
     overflow: auto;
   }
 }
+
