--- a/src/App.css
+++ b/src/App.css
@@ -277,6 +277,24 @@ input#searchright {
   width: 100%;
   border-radius: 5px;
 }
+.shake {
+  animation: shake 0.5s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0, 0);
+  }
+  33% {
+    transform: translate(10px, 0);
+  }
+  66% {
+    transform: translate(-10px, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
 .search-container {
   position: relative;
   display: inline-block;
