--- a/src/components/LaunchCalendar/Style.css
+++ b/src/components/LaunchCalendar/Style.css
@@ -56,7 +56,7 @@ h1.TopHeading {
   border: 1px dashed #000;
 }
 .timeline-content {
-  width: 95%;
+  width: 98%;
   padding: 12px 16px;
   margin-left: 50px;
 }
@@ -233,6 +233,7 @@ span.ProductQty {
 .GrayBg {
   border-radius: 8px;
   background: #f5f5f5;
+  margin-left: 5%;
 }
 
 .PlusBtn {
