--- a/src/components/OrderList/listStyle.module.css
+++ b/src/components/OrderList/listStyle.module.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     border: 1px solid #ddd;
     border-radius: 5px;
-    max-width: 800px;
-    margin: 20px auto;
+    margin: 20px 0;
     background-color: white;
   }
   
