--- a/src/components/TopProductCard/index.module.css
+++ b/src/components/TopProductCard/index.module.css
@@ -160,15 +160,17 @@
 .priceHolder {
   font-family: Montserrat-500;
   font-size: 24px;
-  line-height: 34px;
+  /* line-height: 15px; */
   font-weight: bold;
   display: flex;
 }
-.priceCrossed {
+ .priceCrossed {
   color: #ccc;
+    /* line-height: 15px; */
   text-decoration: line-through;
   font-size: 14px;
-}
+
+ }
 .priceHolder a {
   color: #000;
   text-decoration: none;
