--- a/src/components/TopProductCard/index.module.css
+++ b/src/components/TopProductCard/index.module.css
@@ -163,14 +163,16 @@
   /* line-height: 15px; */
   font-weight: bold;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
- .priceCrossed {
+.priceCrossed {
   color: #ccc;
-    /* line-height: 15px; */
+  /* line-height: 15px; */
   text-decoration: line-through;
   font-size: 14px;
-
- }
+  margin: 0;
+}
 .priceHolder a {
   color: #000;
   text-decoration: none;
@@ -230,44 +232,51 @@
   height: 30px;
 }
 /* animation */
-.ImgHover img{
+.ImgHover img {
   width: 100%;
   height: 300px;
 }
- .ImgHover1 {
+.ImgHover1 {
   position: relative;
   margin: 0;
   overflow: hidden;
   padding: 0;
-  transition: .75s;
-  cursor: pointer; 
-  
+  transition: 0.75s;
+  cursor: pointer;
 }
-.ImgHover1::before{
+.ImgHover1::before {
   position: absolute;
   top: 0;
   left: -75%;
   z-index: 2;
   display: block;
-  content: '';
+  content: "";
   width: 50%;
   height: 100%;
-  background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-  background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(240, 240, 240, 0.3) 100%);
+  background: -webkit-linear-gradient(
+    left,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.3) 100%
+  );
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(240, 240, 240, 0.3) 100%
+  );
   transform: skewX(-25deg);
 }
-.ImgHover1::before{
-  -webkit-animation: shine .75s;
-  animation: shine .75s;
+.ImgHover1::before {
+  -webkit-animation: shine 0.75s;
+  animation: shine 0.75s;
 }
 @-webkit-keyframes shine {
   100% {
-      left: 125%;
+    left: 125%;
   }
 }
 @keyframes shine {
   100% {
-      left: 125%;
+    left: 125%;
   }
 }
 @media (max-width: 900px) {
