--- a/src/components/TopProductCard/index.module.css
+++ b/src/components/TopProductCard/index.module.css
@@ -15,8 +15,12 @@
   place-items: center;
   padding: 25px 10px;
   border-radius: 10px;
-  margin: auto;
   position: relative;
+  transition: box-shadow 0.3s;
+}
+.cardElement:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+  transform: translateY(-2px);
 }
 .BrandInRadio {
   border-radius: 8px;
@@ -279,9 +283,17 @@
     left: 125%;
   }
 }
+@media (max-width: 1199px) {
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, 24%);
+  }
+}
 @media (max-width: 900px) {
   .ModalResponsive {
     grid-template-columns: repeat(2, auto);
+  }
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, 30%);
   }
 }
 
