--- a/src/components/NewArrivalsPage/NewArrivals.module.css
+++ b/src/components/NewArrivalsPage/NewArrivals.module.css
@@ -88,8 +88,22 @@
 .priceHolder {
   font-family: Montserrat-500;
   font-size: 24px;
-  line-height: 34px;
+  /* line-height: 15px; */
   font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.priceCrossed {
+  color: #ccc;
+  /* line-height: 15px; */
+  text-decoration: line-through;
+  font-size: 14px;
+  margin: 0;
+}
+.priceHolder a {
+  color: #000;
+  text-decoration: none;
 }
 .btnHolder {
   background-color: #000;
@@ -170,5 +184,15 @@
 @keyframes shine {
   100% {
     left: 125%;
+  }
+}
+@media (max-width: 1199px) {
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, 24%);
+  }
+}
+@media (max-width: 900px) {
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, 30%);
   }
 }
