--- a/src/components/Dashboard/Dashboard.module.css
+++ b/src/components/Dashboard/Dashboard.module.css
@@ -23,6 +23,15 @@
   line-height: 32px;
   letter-spacing: 1.12px;
 }
+.Tabletext2 {
+  color: #000;
+  font-family: Arial;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 1.12px;
+}
 
 .Tabletext_head {
   color: #000;
@@ -270,6 +279,15 @@
   background-color: rgb(252, 252, 252);
 }
 
+.donuttop2 {
+  width: 95%;
+  height: 250px;
+  border: 1px black dashed;
+  background-color: rgb(252, 252, 252);
+}
+.Maindiv{
+  display: flex;
+}
 .donutchart {
   justify-content: center;
   align-items: center;
@@ -465,7 +483,7 @@
   width: 99%;
 }
 
-@media (max-width: 1570px) and (min-width: 1025px) {
+/* @media (max-width: 1570px) and (min-width: 1025px) {
   .top_accounttext {
     font-size: 15px;
   }
@@ -473,9 +491,9 @@
   .tablerow {
     font-size: 16px;
   }
-}
+} */
 
-@media (max-width: 1024px  ) and (min-width:769px) {
+/* @media (max-width: 1024px  ) and (min-width:769px) {
   .top_accounttext {
     font-size: 14px;
   }
@@ -493,19 +511,39 @@
 .Tabletext {
   font-size: 13px;
 }
+.Tabletext1 {
+  font-size: 13px;
 }
-@media (max-width: 768px) {
+} */
+/* @media (max-width: 768px ) and (min-width:425px)  {
   .activetext{
     font-size: 13px;
   }
   .donutbox {
     margin-top: -28%;
     margin-left: -4%;
-
 }
+.donuttop1 {
+  width: 109%;
+  height: 250px;
+  border: 1px black dashed;
+  background-color: rgb(252, 252, 252);
+  
 }
+.donuttop2 {
+  width: 109%;
+  height: 250px;
+  border: 1px black dashed;
+  background-color: rgb(252, 252, 252);
+  margin-left: 15%;
+}
+.Tabletext1 {
+  font-size: 13px;
+ margin-left: 5%;
+}
+} */
 
-@media (max-width: 1299px) {
+/* @media (max-width: 1299px) {
   .activetext1 {
     font-size: 35px;
   }
@@ -519,6 +557,9 @@
   .Tabletext {
     font-size: 15px;
   }
+  .Tabletext1 {
+    font-size: 15px;
+  }
 
   .top_accounttext {
     font-size: 12px;
@@ -529,9 +570,9 @@
   .tabletd {
     font-size: 12px;
   }
-}
+} */
 
-@media (max-width: 991px) {
+/* @media (max-width: 991px) {
   .top_account {
     height: 35px;
   }
@@ -544,9 +585,9 @@
   .top_perform1 {
     border-right: 0px rgb(32, 32, 32) dashed;
   }
-}
+} */
 
-@media (max-width: 767.98px) {
+/* @media (max-width: 767.98px) {
   .head_topp {
     display: none;
   }
@@ -562,9 +603,144 @@
     left: 49.5%;
     border-right: 0px dashed rgb(32, 32, 32);
   }
+} */
+/* 
+@media (max-width: 425px) {
+  .Maindiv{
+    display: block;
+  }
+  .donuttop1 {
+    width: 100%;
+    height: 250px;
+    border: 1px black dashed;
+    background-color: rgb(252, 252, 252);
+   
+  }
+  .donuttop2 {
+    width: 100%;
+    height: 250px;
+    border: 1px black dashed;
+    background-color: rgb(252, 252, 252);
+    margin-left: 0%;
+  }
+ 
+  .Tabletext1 {
+margin-left: 0;
+  }
+} */
+
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+@media (max-width: 1200px) {
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, minmax(24%, 1fr));
+  }
+  .activetext1 {
+    font-size: 35px;
+  }
+  .main_heading {
+    font-size: 15px;
+  }
+  .Tabletextt {
+    font-size: 16px;
+  }
+
+  .Tabletext {
+    font-size: 15px;
+  }
+  .Tabletext1 {
+    font-size: 15px;
+  }
+
+  .top_accounttext {
+    font-size: 12px;
+  }
+  .tablerow {
+    font-size: 12px;
+  }
+  .tabletd {
+    font-size: 12px;
+  }
+
 }
 
+@media (max-width: 900px) {
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
+  }
+  .top_account {
+    height: 35px;
+  }
+  .top_accnew {
+    height: 35px;
 
+   
+  }
+
+  .top_perform1 {
+    border-right: 0px rgb(32, 32, 32) dashed;
+  }
+  .activetext{
+    font-size: 13px;
+  }
+  .donutbox {
+    margin-top: -28%;
+    margin-left: -4%;
+}
+.donuttop1 {
+  width: 109%;
+  height: 250px;
+  border: 1px black dashed;
+  background-color: rgb(252, 252, 252);
+  /* margin-left: 10%; */
+}
+.donuttop2 {
+  width: 109%;
+  height: 250px;
+  border: 1px black dashed;
+  background-color: rgb(252, 252, 252);
+  margin-left: 15%;
+}
+.Tabletext1 {
+  font-size: 13px;
+ margin-left: 5%;
+}
+}
+
+@media (max-width: 650px) {
+  .dGrid {
+    grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+  }
+
+  .Maindiv{
+    display: block;
+  }
+  .donuttop1 {
+    width: 100%;
+    height: 250px;
+    border: 1px black dashed;
+    background-color: rgb(252, 252, 252);
+    /* margin-left: 10%; */
+  }
+  .donuttop2 {
+    width: 100%;
+    height: 250px;
+    border: 1px black dashed;
+    background-color: rgb(252, 252, 252);
+    margin-left: 0%;
+  }
+  .donutchart {
+    /* justify-content: center;
+    align-items: center; */
+    /* display: block; */
+  }
+  .Tabletext1 {
+margin-left: 0;
+  }
+}
 
 
 
