--- a/src/components/sales report table/table.module.css
+++ b/src/components/sales report table/table.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Open+Sans:wght@300;400;500;600&family=Rubik:wght@300;400;500;600;700;800&display=swap");                  
 .tableBoundary {
   border: 1px dashed #000;
   /* overflow: auto; */
@@ -125,9 +126,22 @@
   letter-spacing: 1.6px;
   padding-left: 20px !important;
 }
+.srcollvar{
+  max-height: 73vh;
+  min-height: 40vh;
+  overflow: "auto";
+  width:'100%'
+}
+.tableResponsive{
+min-height: 600px;
+}
 
-/* #salesReportTable tbody tr:nth-last-child(1) {
-  position: sticky;
-  bottom: 0%;
-  z-index: 6;
-} */
+ @media (max-width: 900px) {
+  /* Remove sticky position for smaller devices */
+    .tableResponsive {
+      min-width: 775px !important;
+      width: 100% !important;
+      overflow: hidden !important;
+  }
+
+} 
