--- a/src/components/BrandDetails/Accordion/Style.module.css
+++ b/src/components/BrandDetails/Accordion/Style.module.css
@@ -1,37 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700&family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Open+Sans:wght@300;400;500;600&family=Rubik:wght@300;400;500;600;700;800&display=swap");
 
-.OverFloweClass{
-  min-width:850px;
-
+.OverFloweClass {
+  min-width: 850px;
 }
-.ControlTR{
-  border: 1px solid #F8F8F8;
-  background: #FFF;
+.ControlTR {
+  border: 1px solid #f8f8f8;
+  background: #fff;
 }
-input[type=radio]:checked{
+input[type="radio"]:checked {
   accent-color: #000;
 }
-.ControlStyle img{
-  
+.ControlStyle img {
   margin: auto;
 }
 
-.ButtonControl button{
-border: 1px solid #000 !important;
+.ButtonControl button {
+  border: 1px solid #000 !important;
 }
-.customPriceInput{
+.customPriceInput {
   max-width: 100px;
-    border: 1px solid rgb(204, 204, 204);
-    border-radius: 5px;
-    padding: 1px 5px;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 5px;
+  padding: 1px 5px;
+  line-height: 0;
 }
 .customPriceInput:focus {
   outline: none;
 }
-.PriceInput{
-  padding: 0px 10px ;
+.PriceInput {
+  padding: 0px 10px;
 }
-.ButtonControl input{
+.ButtonControl input {
   width: 20px !important;
 }
 
@@ -189,4 +188,3 @@ align-items: center;
   height: 30px;
 }
 /* ............ */
-
