--- a/src/components/NewArrivalsPage/NewArrivals.module.css
+++ b/src/components/NewArrivalsPage/NewArrivals.module.css
@@ -40,7 +40,7 @@
 }
 .cardElement:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
-  transform: translateY(-2px);
+  /* transform: translateY(-2px); */
 }
 .salesHolder {
   position: absolute;
@@ -192,6 +192,7 @@
   }
 }
 @media (max-width: 900px) {
+
   .dGrid {
     grid-template-columns: repeat(auto-fill, 30%);
   }
