--- a/src/components/TopProductCard/index.module.css
+++ b/src/components/TopProductCard/index.module.css
@@ -18,10 +18,10 @@
   position: relative;
   transition: box-shadow 0.3s;
 }
-/* .cardElement:hover {
+.cardElement:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
-  transform: translateY(-2px);
-} */
+  /* transform: translateY(-2px); */
+}
 .BrandInRadio {
   border-radius: 8px;
   border: 1px solid #d5d9d9;
