--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,30 @@ p.seti {
   margin-top: 25px;
   margin-bottom: 1rem;
 }
+
+.modalButton{
+  font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    height: 30px;
+    letter-spacing: 1.4px;
+    line-height: normal;
+    text-transform: uppercase;
+    width: 100px;
+    background-color: #000;
+    color: #fff;
+}
+.modalContent{
+  color: #000;
+  font-family: Arial-400;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 1.12px;
+  line-height: normal;
+  text-align: center;
+}
 .carousel .thumb img {
   max-height: 100px!important;
   width: auto!important;
