--- a/src/components/OrderStatusFormSection/style.module.css
+++ b/src/components/OrderStatusFormSection/style.module.css
@@ -38,6 +38,8 @@
   padding: 10px;
   background: #fff;
   margin-top: 1rem;
+  flex-direction: column;  
+  align-items: flex-start;
 }
 .attachHolder label{
   display: grid;
