--- a/src/components/ProductDetailCard/Styles.module.css
+++ b/src/components/ProductDetailCard/Styles.module.css
@@ -16,6 +16,11 @@
   display: grid;
   place-content: center;
 }
+.soonHolder {
+  font-size: 6.5px;
+  letter-spacing: 0.5px;
+  text-align: end;
+}
 .product-card-element-holder {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
