--- a/src/components/BrandDetails/Accordion/Style.module.css
+++ b/src/components/BrandDetails/Accordion/Style.module.css
@@ -14,6 +14,16 @@ input[type="radio"]:checked {
   margin: auto;
 }
 
+.confirmButton {
+  background-color: black !important;
+  color: white;
+  border: none;
+}
+
+.confirmButton:hover {
+  background-color: darkgray; 
+}
+
 .ButtonControl button {
   border: 1px solid #000 !important;
 }
