--- a/src/components/IssuesHandler/Attachements.module.css
+++ b/src/components/IssuesHandler/Attachements.module.css
@@ -21,6 +21,16 @@
   letter-spacing: 2.2px;
   text-transform: uppercase;
 }
+.fileIcon1{
+  background-color: #fff !important;
+  width: 100px !important;
+  height: 100px !important;
+  border: 1px solid #ccc !important;
+  display: flex
+;
+  justify-content: center;
+  align-items: center;
+}
 .attachContainer {
   border: 1px dashed #3c74b4 !important;
   padding: 10px;
@@ -61,6 +71,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, 100px);
   gap: 5px;
+  justify-content: center;
 }
 .imgHolder img {
   width: 100px;
