--- a/src/components/IssuesHandler/Style.module.css
+++ b/src/components/IssuesHandler/Style.module.css
@@ -30,17 +30,18 @@
 
 
 .fileIcon {
-  width: 100px;           /* Width of each image */
-  height: 100px;          /* Height of each image */
+  width: 100px;           
+  height: 100px;         
   display: flex;
-  justify-content: center;  /* Horizontally center the image */
-  align-items: center;      /* Vertically center the image */
+  justify-content: center; 
+  align-items: center;    
+
 }
 
 .imagePreview {
   max-width: 100%;        /* Ensure the image scales within its container */
   max-height: 100%;       /* Ensure the image scales within its container */
-  object-fit: contain;    /* Maintain aspect ratio */
+  /* object-fit: contain;    Maintain aspect ratio */
 }
 
 /* Ensure that images inside the .imgHolder take full space and maintain their aspect ratio */
@@ -51,7 +52,10 @@
   object-position: center; /* Keep the image centered */
   border-radius: 8px;     /* Optional: Add rounded corners */
   max-width: 100%;        /* Ensure the image doesn't overflow horizontally */
-  max-height: 200px;      /* Optional: Set a max-height for images */
+  max-height: 100px;  
+  min-height: 100px;  
+  justify-content: center; /* Centers icons horizontally */
+  align-items: center;     /* Optional: Set a max-height for images */
 }
 
 /* Optional: Styling for the count text */
@@ -59,7 +63,11 @@
   font-size: 14px;
   color: #555;
   margin-top: 10px;
+  font-family: "Montserrat" !important;
 }
+
+
+
 
 .reasonHolder {
   margin: 20px 0;
