--- a/src/components/OrderStatusFormSection/style.module.css
+++ b/src/components/OrderStatusFormSection/style.module.css
@@ -60,7 +60,7 @@
 
   
 }
-.imgHolder img{
+/* .imgHolder img{
   width: 100px;
   height: auto;
   border: 1px solid #ccc !important;
@@ -70,7 +70,27 @@
   flex-wrap: wrap;
   gap: 10px;
 
+} */
+.imgHolder {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 100px);
+  gap: 5px;
+  justify-content: center;
 }
+.imgHolder img {
+  width: 100px;
+  height: auto;
+}
+.fileIcon1{
+  background-color: #fff !important;
+  width: 100px !important;
+  height: 100px !important;
+  border: 1px solid #ccc !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .subTitle {
   color: #000;
   text-align: left;
