--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,24 @@ input#searchright {
 input#searchright {
   border-bottom: 1px solid;
 }
-
+.modalButton{
+    color: #fff;
+    text-align: center;
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 1.8px;
+    /* border-radius: 8px; */
+    background: #000;
+    height: 34px;
+    padding: 0px 8px;
+    border: none;
+    margin-top: -3px;
+    display: grid;
+    place-content: center;
+}
 .button {
   display: inline-block;
   margin: 4px 2px;
