--- a/src/components/MyBagFinal/ShipmentHandler/Styles.module.css
+++ b/src/components/MyBagFinal/ShipmentHandler/Styles.module.css
@@ -24,7 +24,7 @@
 
 .templateHolder:hover {
   box-shadow: 0 0 10px rgba(13, 41, 71, 0.5);
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
 }
 .templateHolder .labelHolder {
     margin: 0;
@@ -41,7 +41,7 @@
 }
 .selected {
   border-color: #000; /* Black border for selected templates */
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
 }
 .hiddenRadio {
   display: none;
