--- a/src/components/OrderList/MyBagFinal/Styles.module.css
+++ b/src/components/OrderList/MyBagFinal/Styles.module.css
@@ -242,16 +242,21 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 5px 0 5px;
+  position: sticky;
+  bottom: 20px;
+  background: #fff;
+  flex-direction: column;
 }
 
 .TotalPricer h2 {
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 32px; /* 177.778% */
+  line-height: 25px; /* 177.778% */
   letter-spacing: 1.12px;
+  margin: 0;
 }
 .Mainbox5 {
   margin: 0 0 0 20px;
