--- a/src/components/OrderList/MyBagFinal/Styles.module.css
+++ b/src/components/OrderList/MyBagFinal/Styles.module.css
@@ -37,11 +37,28 @@
   background-color: #000000;
   width: 4px;
 }
+.paymentCheck{
+  border: 1px solid #00000025;
+  margin: 5px 0px;
+  
+}
+.paymentCheck p {
+  color: #000;
+  font-family: "Montserrat";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 177.778% */
+  letter-spacing: 1.12px;
+  margin-left: 8px;
+  
+}
 
 .MyBagFinalTop {
   display: flex;
   justify-content: space-between;
 }
+.payment
 
 .MyBagFinalRight,
 .MyBagFinalleft {
